--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,5 @@
 version: 2.1
 
-commands:
-  log_start:  # Example a of shared command
-    steps:
-      - run: echo "Job started"
-
 jobs:
   build:
     docker:
@@ -12,7 +7,6 @@ jobs:
     working_directory: /project
     steps:
       - checkout
-      - log_start
       - run: make build
       - run: make test
 
@@ -21,7 +15,6 @@ jobs:
       - image: golang:1.15
     steps:
       - checkout
-      - log_start
       - run: make install_lint
       - run: make build
       - run: make check-modtidy
@@ -32,7 +25,6 @@ jobs:
       - image: golang:1.15
     steps:
       - checkout
-      - log_start
       - run:
           name: "Prebuild"
           command: |
@@ -56,7 +48,7 @@ workflows:
     jobs:
       - build
       - checks
-      - integration:
-          requires:
-            - build
-            - checks
+#      - integration:
+#          requires:
+#            - build
+#            - checks
