Refactoring Makefile and docker test

--- a/tests_docker/test_database.yml
+++ b/tests_docker/test_database.yml
@@ -1,25 +1,28 @@
 version: "3.9"
 networks:
-  mongo:
+  dbNetwork:
     driver: bridge
+
 services:
   mongodb:
     image: mongo:latest
     logging:
       driver: none
     networks:
-      - mongo
+      - dbNetwork
     environment:
       MONGO_INITDB_ROOT_USERNAME: mongo
       MONGO_INITDB_ROOT_PASSWORD: password
 
   goapp:
     image: golang:latest
+    depends_on:
+      - mongodb
     networks:
-      - mongo
+      - dbNetwork
     volumes:
       - ./../:/app
     working_dir: /app
     environment:
       MONGO_URI: mongodb://mongo:password@mongodb:27017/
-    entrypoint: ["make", "test-mongo"]
+    entrypoint: ["make", "test-database"]
