--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,5 +48,10 @@ jobs:
       - uses: actions/setup-go@v2
         with:
           go-version: '^1.17'
+      - name: "Launch db engine in background"
+        run: |
+          make test-database-up
+      - name: "Give time for processes to start"
+        run: sleep 5
       - name: Integration test
         run:  make test-integration
