--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,6 +38,24 @@ jobs:
           make install_lint
           make lint
 
+  tests-components:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          submodules: true
+      - uses: actions/setup-go@v2
+        with:
+          go-version: '^1.17'
+      - name: "Launch db engine in background"
+        run: |
+          make test-database-up
+      - name: "Give time for processes to start"
+        run: sleep 5
+      - name: Components tests
+        run:  make test-components
+
   tests-integration:
     runs-on: ubuntu-latest
     steps:
