Fix golint issue, added fmt check to ci

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,8 @@ jobs:
       - run: make build
       - name: ModTidy check
         run: make check-modtidy
+      - name: Fmt check
+        run: make fmt-check
       - name: Lint check
         run: |
           make install_lint
