--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,8 @@ jobs:
         run: make check-modtidy
       - name: Fmt check
         run: make fmt-check
+      - name: Vet check
+        run: make vet
       - name: Lint check
         run: |
           make install_lint
